--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,200&family=Mooli&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,8 +11,8 @@ Fonts are separated by a & */
   --accent2-color: #910000;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Exo 2";
+  --paragraph-font: Mooli, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #155428;  /* headlines on a white background */ 
@@ -20,10 +20,10 @@ Fonts are separated by a & */
   --paragraph-color-on-white: #0472D9; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #910000; /* paragraph text on a colored background */ 
   --paragraph-background-color: white  ;
-  --nav-link-color: #910000;
-  --nav-background-color: white;
-  --nav-hover-link-color: #155428;
-  --nav-hover-background-color: white;
+  --nav-link-color: #00171f;
+  --nav-background-color: #0472D9;
+  --nav-hover-link-color: white;
+  --nav-hover-background-color: #0472D9;
 }
 
 
