--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -23,3 +23,8 @@ nav {
     background-color: steelblue;
     color: white;
   }
+  .main-paragraph {
+    font-size: 1.5em;
+    line-height: 1.5em;
+    
+  }
