--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -26,5 +26,10 @@ nav {
   .main-paragraph {
     font-size: 1.5em;
     line-height: 1.5em;
+
+  }
+  #active {
+    background-color: white;
+    color: steelblue;
     
   }
