--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,6 +1,3 @@
-body {
-    text-align: center;
-}
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -8,9 +5,11 @@ nav {
   a {
     color: white;
     margin: 40px;
+    
   }
   h1 {
     color: steelblue;
+    text-align: center; 
   }
   img {
     width: 800px;
@@ -18,6 +17,7 @@ nav {
   }
   p {
     padding: 10px;
+    
   }
   footer {
     background-color: steelblue;
@@ -26,6 +26,9 @@ nav {
   .main-paragraph {
     font-size: 1.5em;
     line-height: 1.5em;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
 
   }
   #active {
@@ -33,3 +36,34 @@ nav {
     color: steelblue;
     
   }
+  img {
+    width: 80%;
+  }
+  p {
+    width: 80%;
+  }
+  a {
+    font-size: 1.5em;
+  }
+  img {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  * {
+    border: 2px solid blue;
+}
+nav, footer {
+  text-align: center;
+  background-color: steelblue;
+    color: white;
+    padding: 10px;
+}
+footer p {
+  font-size: 20px;
+  margin: 20px auto;
+}
+a:hover {
+  background-color: white;
+  color: steelblue;
+}
