--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,15 +1,16 @@
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 25px;
   }
   a {
     color: white;
     margin: 40px;
-    
+    padding: 25px;
   }
   h1 {
     color: steelblue;
     text-align: center; 
+    margin: 50px 0;
   }
   img {
     width: 800px;
@@ -29,8 +30,7 @@ nav {
     width: 80%;
     margin: 0 auto;
     text-align: center;
-
-  }
+}
   #active {
     background-color: white;
     color: steelblue;
@@ -38,6 +38,7 @@ nav {
   }
   img {
     width: 80%;
+    border: 4px solid steelblue;
   }
   p {
     width: 80%;
@@ -62,8 +63,12 @@ nav, footer {
 footer p {
   font-size: 20px;
   margin: 20px auto;
+  padding: 25px;
 }
 a:hover {
   background-color: white;
   color: steelblue;
+}
+body {
+  margin: 0;
 }
