--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Exo 2";
-  --paragraph-font: Mooli, Helvetica, sans-serif;
+  --paragraph-font: "Mooli", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #155428;  /* headlines on a white background */ 
