--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -6,6 +6,7 @@ nav a {
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -22,9 +23,16 @@ main section {
 }
 body {
     background-color: lightblue;
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color: seagreen;
+    font-family: "Exo 2";
 }
 nav a:hover {
     background-color: white;
@@ -34,6 +42,9 @@ nav a:hover {
     background-color: lightgray;
     color: black;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
 }
 .book:hover, .join:hover {
     background-color: lightsteelblue;
@@ -41,22 +52,32 @@ nav a:hover {
 } 
 .msg {
     background-color: green;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer {
     background-color: skyblue;
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 .home-title {
     color: black;
+    font-family: "Exo 2", Arial, Helvetica;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4 {
     color: darkgreen;
 }
 .msg h2 {
     color: white;
+    font-family: "Exo 2", Arial, Helvetica;
 }
 .msg p {
     color: white;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer a {
     color: white;
@@ -67,6 +88,7 @@ footer a:hover {
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
@@ -76,4 +98,13 @@ footer p {
 }
 footer p a:hover {
     text-decoration: underline;
+}
+#logo_link {
+    padding-top: 5px;
+}
+footer .social img {
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
 }
