--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -17,6 +17,9 @@ nav a {
 main section {
     text-align: center;
 }
+main section img {
+    box-sizing: border-box;
+}
 #background {
     height: 725px;
     background-color: lightblue;
@@ -45,6 +48,7 @@ nav a:hover {
     font-size: 18px;
     padding: 15px 30px;
     margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: lightsteelblue;
@@ -107,4 +111,7 @@ footer .social img {
 }
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
+}
+.card-img {
+    border: 10px solid black;
 }
