--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -14,13 +14,13 @@
   grid-column: 1/3;
 } 
 .green1 {
-  width: 100px; 
+  width: 200px; 
   height: 200px; 
   background-color: green; 
 
 } 
 .yellow1 {
-  width: 100px; 
+  width: 200px; 
   height: 200px; 
   background-color: gold; 
 } 
@@ -33,6 +33,11 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  height: 250px;
+  display: grid;
+  grid-auto-rows: 50px;
+  grid-auto-columns: 50px;
+  gap: 0;
 }
 .red2 {
   width: 100px; 
@@ -43,64 +48,81 @@
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  grid-row: 2;
+  grid-column: 2;
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
-  background-color: gold; 
+  background-color: gold;
+  grid-row: 3;
+  grid-column: 3;
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  grid-row: 4;
+  grid-column: 4;
 } 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-auto-rows: auto;
+  grid-auto-columns: auto;
+  gap: 0 100px;
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
-  background-color: red; 
+  background-color: red;
+  grid-column: 1/3; 
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: green;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: gold; 
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
   background-color: blue; 
+  grid-column: 1 / span 2;
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0;
   height: 400px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
+  grid-row: 1 / span 3;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: blue; 
 } 
 /* Activity 5 styles */ 
@@ -109,50 +131,67 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
-
+  float: left;
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 
 } 
 .blue5 {
-  width: 100px; 
+  clear: both;
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  gap: 0;
+  width: 600px;
+  height: 600px;
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  width: 100%; 
+  height: 100%; 
+  background-color: red;
+  grid-column: 1/5;
+  grid-row: 1/3; 
+  z-index: -10;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 1005; 
+  height: 100%; 
   background-color: green; 
+  grid-column: 1/3;
+  grid-row: -1/-3;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
+  grid-column: -1/-3;
+  grid-row: -1/-5;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: blue; 
+  grid-column: 2/6;
+  grid-row: 2/6;
+  z-index: -5;
 } 
 
 
