--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -36,6 +36,8 @@ h2 {
 header {
     background-color: seagreen;
     font-family: "Exo 2";
+    display: grid;
+    grid-template-columns: 150px 0;
 }
 nav a:hover {
     background-color: white;
@@ -105,6 +107,8 @@ footer p a:hover {
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 footer .social img {
     padding-top: 15px;
@@ -114,4 +118,31 @@ footer .social img {
 }
 .card-img {
     border: 10px solid black;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#home-grid {
+    display: grid;
+    grid-template-columns: 10fr;
+
 }
