--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -64,6 +64,7 @@ nav a:hover {
     padding: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 footer {
     background-color: skyblue;
@@ -125,6 +126,13 @@ footer .social img {
 }
 .card-img {
     border: 10px solid black;
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 nav {
     display: flex;
@@ -168,6 +176,9 @@ nav {
     grid-row: 2/3;
 }
 .mountains {
+    width: 100%;
     grid-column: 2/7;
     grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+
