--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -137,7 +137,7 @@ footer .social img {
     transform: scale(1.1);
 }
 nav {
-    display: flex;
+    display: center;
     justify-content: space-around;
 }
 #hero {
