--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -137,7 +137,7 @@ footer .social img {
     transform: scale(1.1);
 }
 nav {
-    display: center;
+    display: flex;
     justify-content: space-around;
 }
 #hero {
@@ -158,9 +158,9 @@ nav {
     grid-row: 1/2;
     margin-top: 100px;
 }
-#home-grid {
+.home-grid {
     display: grid;
-    grid-template-columns: 10fr;
+    grid-template-columns: repeat(10, 1fr);
 }
 .card-img, .mountains {
     width: 100%;
