--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -39,7 +39,7 @@ header {
     display: grid;
     background-color: seagreen;
     font-family: "Exo 2";
-    grid-template-columns: 150px 0;
+    grid-template-columns: 150px auto;
     justify-self: center;
     align-self: center;
 }
@@ -143,7 +143,7 @@ nav {
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px;
+    margin-top: -100px;   
 }
 #hero-box {
     grid-column: 1/4;
