--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -183,6 +183,9 @@ nav {
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
+h1 {
+    color: white;
+}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
