--- a/get2work/styles/site-plan.css
+++ b/get2work/styles/site-plan.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #4b73df;
+  --secondary-color: white;
+  --accent1-color: ##059337;
+  --accent2-color: #9f9f9f;
 
   /* change the values below to your chosen font(s) */
   --heading-font: Merienda, cursive;
   --paragraph-font: Noto Sans;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #4b73df;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --paragraph-background-color: white;
+  --nav-link-color: #9f9f9f;
+  --nav-background-color: white;
+  --nav-hover-link-color: #9f9f9f;
+  --nav-hover-background-color: #059337;
 }
 
 
