--- a/get2work/styles/site-plan.css
+++ b/get2work/styles/site-plan.css
@@ -7,7 +7,7 @@ Fonts are separated by a | */
   /* change the values below to your colors from your palette */
   --primary-color: #4b73df;
   --secondary-color: white;
-  --accent1-color: ##059337;
+  --accent1-color: #059337;
   --accent2-color: #9f9f9f;
 
   /* change the values below to your chosen font(s) */
