--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -62,13 +62,16 @@ body {
     margin: 0;
     padding: 0;
 }
-#salmon-river {
-    text-align: left;
-}
-#salmon-river-img  img{
-    width: 100%;
-    align-self: right;
-}
 h1, h2 {
     text-align: center;
+}
+.container {
+    text-align: center;
+}
+img {
+    vertical-align: middle;
+}
+p {
+    display: incliine;
+    margin: 0;
 }
