--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -70,8 +70,9 @@ h1, h2 {
 }
 img {
     vertical-align: middle;
+    margin-bottom: 5px;
 }
 p {
     text-align: left;
-    margin: 0;
+    margin-top: auto;
 }
