--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -66,7 +66,7 @@ h1, h2 {
     text-align: center;
     font-family: "Exo 2";
 }
-.container {
+.container-salmon {
     text-align: center;
 }
 img {
