--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -86,3 +86,11 @@ p {
     font-family: "Mooli";
     font-size: 1.4em;
 }
+.msg {
+    background-color: green;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
