--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -103,3 +103,12 @@ p {
     font-size: .8em;
     padding-bottom: 15px;
 }
+.join {
+    background-color: lightgray;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
