--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -82,8 +82,8 @@ img {
 }
 p {
     text-align: center;
-    text-align: justify;
     margin-top: auto;
     font-family: "Mooli";
     font-size: 1.4em;
+    justify-content: center;
 }
