--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -65,6 +65,7 @@ body {
 h1, h2 {
     text-align: center;
     font-family: "Exo 2";
+    padding: auto;
 }
 .container-salmon {
     text-align: center;
