--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -86,5 +86,5 @@ p {
     margin-top: auto;
     font-family: "Mooli";
     font-size: 1.4em;
-    justify-content: center;
+    justify-content: justify;
 }
