--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -12,4 +12,11 @@
     height: 100vh;
     background-color: white;
 }
-
+header {
+    display: grid;
+    background-color: seagreen;
+    font-family: "Exo 2";
+    grid-template-columns: 150px auto;
+    justify-self: center;
+    align-self: center;
+}
