--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -20,3 +20,9 @@ header {
     justify-self: center;
     align-self: center;
 }
+nav a {
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    padding: 35px;
+}
