--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -14,7 +14,7 @@ body, h1, h2, h3, ul, li {
   
   /* Styling the logo */
   .logo img {
-    width: 100%; /* Ensure the logo doesn't exceed the container's width */
+    max-width: 100%; /* Ensure the logo doesn't exceed the container's width */
   }
   
   /* Styling the navigation */
