--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -58,6 +58,8 @@ body, h1, h2, h3, ul, li {
   
   .audience-image img {
     width: 100%; /* Make the image fill the container */
+    height: auto; /* Maintain image aspect ratio */
+    display: block; /* Remove extra space under the image */
   }
   
   .audience-text {
