--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -75,3 +75,38 @@ body, h1, h2, h3, ul, li {
   ul li {
     margin-bottom: 15px; /* Adjust the space between list items */
   }
+  /* Creating space after the audience section */
+.spacer {
+  height: 50px; /* Adjust the height of the white space as needed */
+}
+
+.vision-section {
+  max-width: 800px;
+  margin: 0 auto;
+  overflow: hidden;
+  /* Add any additional styling for the vision section */
+}
+
+.vision-content {
+  display: flex;
+  flex-direction: row;
+}
+
+.vision-image {
+  flex-basis: 40%;
+  text-align: left;
+  padding-right: 30px;
+  box-sizing: border-box;
+}
+
+.vision-image img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.vision-text {
+  flex-basis: 60%;
+  text-align: justify;
+  box-sizing: border-box;
+}
