--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -75,7 +75,7 @@ body, h1, h2, h3, ul, li {
   ul li {
     margin-bottom: 15px; /* Adjust the space between list items */
   }
-  /* Creating space after the audience section */
+/* Creating space after the audience section */
 .spacer {
   height: 50px; /* Adjust the height of the white space as needed */
 }
@@ -84,7 +84,7 @@ body, h1, h2, h3, ul, li {
   max-width: 800px;
   margin: 0 auto;
   overflow: hidden;
-  /* Add any additional styling for the vision section */
+  /* Additional styling as needed */
 }
 
 .vision-content {
