--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -89,6 +89,7 @@ body, h1, h2, h3, ul, li {
 
 .vision-content {
   display: flex;
+  align-items: center; /* Align items vertically */
 }
 
 .vision-image {
