--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -112,8 +112,9 @@ body, h1, h2, h3, ul, li {
 }
 .audience-section,
 .vision-section {
-  width: 90%; /* Adjust the width of the sections */
-  margin: 20px auto; /* Add margin and center the sections */
-  padding: 20px; /* Add padding for spacing inside the sections */
+  width: 100%;
+  margin: 20px auto;
+  padding: 20px;
   box-sizing: border-box;
+  max-width: 900px; /* Adjust the maximum width of the sections */
 }
