--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -106,11 +106,11 @@ body, h1, h2, h3, ul, li {
 }
 
 .vision-text {
-  flex: 1; /* Allow the text to take remaining space */
+  flex: 1;
   text-align: justify;
-  padding-left: 30px; /* Add padding to separate the text from the image */
   box-sizing: border-box;
-  max-width: calc(60% - 30px); /* Adjust the maximum width of the text */
+  padding-left: 20px; /* Adjust padding as needed */
+  max-width: 60%; /* Adjust the maximum width of the text */
 }
 .audience-section,
 .vision-section {
