--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -100,9 +100,11 @@ body, h1, h2, h3, ul, li {
 }
 
 .vision-image img {
-  width: 200px; /* Increase the width of the image */
-  height: auto;
+  width: 100%; /* Set the width to 100% of its container */
+  height: auto; /* Maintain the aspect ratio */
   display: block;
+  max-width: 400px; /* Set a maximum width for the image */
+  margin-right: 30px; /* Add margin to separate the image from text */
 }
 
 .vision-text {
