--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -2,6 +2,7 @@
 body, h1, h2, h3, ul, li {
     margin: 0;
     padding: 0;
+    font-family: Merienda, cursive;
   }
   
   /* Ensuring the header takes full width */
