--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -1,5 +1,5 @@
 /* Resetting default margin and padding */
-body, h1, h2, h3, ul, li {
+h1, h2, h3, ul, li {
     margin: 0;
     padding: 0;
     font-family: Merienda, cursive;
@@ -63,6 +63,7 @@ body, h1, h2, h3, ul, li {
     flex-basis: 60%; /* Adjust text width */
     text-align: justify; /* Justify text */
     box-sizing: border-box;
+    font-family: Noto Sans;
   }
   ul {
     list-style: none;
@@ -100,4 +101,5 @@ body, h1, h2, h3, ul, li {
   flex-basis: 60%;
   text-align: justify;
   box-sizing: border-box;
+  font-family: Noto Sans;
 }
