--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -146,6 +146,6 @@ p {
 }
 
 .course-image p {
-  margin-top: 0; /* Remove top margin of the text */
+  margin-top: 10px; /* Add space between image and text (adjust as needed) */
   text-align: justify; /* Align text */
 }
