--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -136,7 +136,7 @@ p {
 .course-image {
   width: 200px; /* Set a fixed width for each course block */
   text-align: center; /* Center align individual course blocks */
-  margin-bottom: 20px; /* Add space between course blocks */
+  margin-bottom: 40px; /* Add more space between course blocks */
 }
 
 .course-image img {
@@ -146,8 +146,9 @@ p {
 }
 
 .course-image p {
-  margin-top: 15px; /* Add space between image and text */
+  margin-top: 20px; /* Add space between image and text */
   text-align: justify; /* Align text */
   width: 100%; /* Set the width to occupy the entire space */
   line-height: 1.5; /* Adjust line height for better spacing */
+  font-family: 'Noto Sans', sans-serif; /* Set font family to Noto Sans */
 }
