--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -147,3 +147,19 @@ p {
   line-height: 1.6; /* Increase line height for space between lines */
   font-family: 'Noto Sans', sans-serif; /* Set font family to Noto Sans */
 }
+footer a {
+  color: white;
+  text-decoration: none;
+}
+footer a:hover {
+  color: black;
+}
+footer p {
+  font-size: 1.2em;
+}
+footer p a:hover {
+  text-decoration: underline;
+}
+footer .social img {
+  padding-top: 15px;
+}
