--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -164,7 +164,7 @@ footer .social img {
   padding-top: 15px;
 }
 footer {
-  background-color: skyblue;
+  background-color: #4b73df;
   color: white;
   padding: 25px 50px;
   margin-top: 200px;
