--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -173,5 +173,5 @@ footer {
   align-items: center;
 }
 body {
-  background-color: black; /* Set the desired background color */
+  background-color: black !important; /* Set the desired background color */
 }
